--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=22.12.0"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.52.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -20,7 +21,6 @@
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
