--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@stripe/stripe-js": "^3.5.0",
     "@supabase/supabase-js": "^2.52.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
