updates to a lot on the operations page

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ VITE_OPENET_API_KEY=
 
 # Google Maps API Key (for field mapping)
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Sentinel Hub Configuration (for satellite NDVI imagery)
+# Get your credentials at: https://www.sentinel-hub.com/
+# Free tier: 30,000 processing units/month
+# Leave empty to disable satellite NDVI features
+VITE_SENTINEL_HUB_CLIENT_ID=
+VITE_SENTINEL_HUB_CLIENT_SECRET=
