updates to a lot on the home page

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
     "geotiff": "^2.1.4-beta.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.546.0",
     "oauth-1.0a": "^2.2.6",
     "react": "^19.1.0",
