--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "oauth-1.0a": "^2.2.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
