--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:icons": "node scripts/lint-icon-labels.js"
   },
   "eslintConfig": {
     "extends": [
