updates to a lot on all pages

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
+# App Domain Configuration
+# Production domain (used for canonical URLs, redirects, and email links)
+VITE_APP_DOMAIN=https://trellisag.com
+
 # OpenET API Configuration
 # Get your API key at: https://account.etdata.org
 # Leave empty to use demo data
@@ -16,3 +20,12 @@ VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # Leave empty to disable satellite NDVI features
 VITE_SENTINEL_HUB_CLIENT_ID=
 VITE_SENTINEL_HUB_CLIENT_SECRET=
+
+# Stripe Configuration
+# Get your Price IDs from: https://dashboard.stripe.com/products
+# Professional tier ($49/month) - Vineyard module
+VITE_STRIPE_PRICE_PROFESSIONAL=price_xxxxxxxxxxxxxxxxxxxxx
+# Estate tier ($109/month) - Vineyard + Winery modules
+VITE_STRIPE_PRICE_ESTATE=price_xxxxxxxxxxxxxxxxxxxxx
+# Enterprise tier ($249/month) - All modules
+VITE_STRIPE_PRICE_ENTERPRISE=price_xxxxxxxxxxxxxxxxxxxxx
